[tool.poetry]
name = "jsonformer-claude-sync"
version = "0.1.0"
description = ""
authors = ["rahulgs12 <gsr1998@gmail.com>"]
readme = "README.md"
packages = [{include = "jsonformer_claude"}]

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^2.3.0"
anthropic = "^0.3.7"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
